# baza

./: --cmake_dev_tools.cmake  .gitignore  CMakeLists.txt  cmake_dev_tools.cmake  cover.sh
inc/: helper.h
src/: main.cpp
tst/: CMakeLists.txt  dummyTest.cpp
