cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
project(projekt)
add_executable(main src/main.cpp)
target_include_directories(main PUBLIC inc)
add_subdirectory(lib/googletest)
add_subdirectory(tst)
#include(cmake_dev_tools.cmake)